2016-04-08 fido_max
- !! DAQ.FT3 ui32Data, flData sensivity deadband processing for event forming added. B_ODOR implemented.
- DAQ.FT3 KA_GNS SetNewState, SetNewFunction implemented, version rise to 0.2.1.
- Protocol.FT3: Version rise to 0.2.1.

2016-04-07 Roman
- DB.LibsDB.OscadaLibs.db: DAQ template "base.anUnif" expanded by attribute "Connection lost detect delay, s"
    for prevent blinks into hosts in redundancy or so one.
- Archives: pthread_mutex_t resources allocation moved to ResMtx and it's space decreased exclusively to local buffers access and
    prevent some racecondition at the arcivators access.
- DAQ.ModBus: "Value" field of templates set to use as default link, on first enable.


2016-04-06 Roman
- DB.LibsDB.vcaBase.db: Left graphics group fix to "name" attribute.
- !!:Archives: messPut() and messGet() expanded to archivators list allow instead single.
    User API function messGet() expanded by argument "upTo", for the timeout direct control allow.
- FIX:DB.PostgreSQL: Fix cycling at unsuccessful a table's structure correction.
- UI.VCAEngine: To messages reading by repeating tags of primitive "Document" added attribute "docAMessArchs" to allow read only archivators.


2016-04-04 Roman
- SYS: TSYS::strEncode() in variant SQL expanded by doubling method of pointed symbols.
- DB.{PostgreSQL,SQLite}: TSYS::strEncode() in doubling method used.
- UI.VCAEngine: Manual creation mark for pages is added. Mostly for modification of childs clean up and it's inheritance storing prevent
    by it is spare and sometime problematic on the parent update, like messages about impossible to enable a widget.
- FIX:DB.PostgreSQL: Fixed for symbols "'" '"' encoding by it replace to the doubling method.


2016-04-03 Roman
- UI.{Vision,WebVision}: For primitive "Diagram" to data block "data:<dt/>" option "Aproximation (aprox)" is added.
- !!:DAQ.DCON: Some cleaned. Adapted and enabled hierarchical parameters. Pass to real requests at the first and last iterations.