@@ -585,7 +585,8 @@ bool OrigFormEl::cntrCmdAttributes( XMLNode *opt, Widget *src )
 			  "    edit  - allowing to the cells of the row edition (0 or 1), by default - no (0);\n"
 			  "    color - the column color as a whole into the color name or code;\n"
 			  "    colorText - the column's text color as a whole into the color name or code;\n"
-			  "    font - the column's text font in typical OpenSCADA's string.\n"
+			  "    font - the column's text font in typical OpenSCADA's string;\n"
+			  "    sort - sorting by the column [0 - Descending; 1 - Ascending].\n"
 			  "  r   - the row of values, allowed attributes:\n"
 			  "    color - the row color as a whole into the color name or code;\n"
 			  "    colorText - the row's text color as a whole into the color name or code;\n"
