@@ -1,7 +1,15 @@
+2016-04-10 Roman
+- DB.LibsDB.OscadaLibs.db: DAQ template's "base.anUnif" attribute "Connection lost detect delay, s" moved to "Tf, s" in the role.
+- Archive.FSArch: Used FTM() for left the messages time.
+    Checking to duplicated messages into get() adapted for the option "prevDblTmCatLev".
+- UI.{VCAEngine,Vision}: For view "Table" of primitive "FormEl" header's item option "sort" is added for point to initiate sorting collumn.
+
+
 2016-04-08 fido_max
 - !! DAQ.FT3 ui32Data, flData sensivity deadband processing for event forming added. B_ODOR implemented.
 - DAQ.FT3 KA_GNS SetNewState, SetNewFunction implemented, version rise to 0.2.1.
 - Protocol.FT3: Version rise to 0.2.1.
+
 
 2016-04-07 Roman
 - DB.LibsDB.OscadaLibs.db: DAQ template "base.anUnif" expanded by attribute "Connection lost detect delay, s"
